qotd-web/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qotd
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: qotd
